--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>HSLO</title>
 
-        <base href="https://lock999.github.io/sago/">
+        <base href="https://lock999.github.io/Sago/">
 
         <link href="https://fonts.googleapis.com/css?family=Arbutus+Slab|Noto+Sans:400,600,700|Ubuntu:400,700|Oswald:400,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -439,9 +439,9 @@
                 <div id="socket-ip"><i class="material-icons">wifi</i> Not connected</div>
             </div>
             <div class="info-bar">
-                <strong>HSLO 2CL最後</strong> by <strong>Lock傳奇的</strong>
+                <strong>HSLO 2CL最後</strong> by <strong>Lock~傳奇的</strong>
                 <div class="divider"></div>
-                <a href="https://www.youtube.com/channel/UCWwgb3BRnpWk1SG1aopcBtw" target="_blank">Subscribe <i class="fab fa-youtube"></i></a>
+                <a href="https://www.youtube.com/channel/UCpYbaPzdQt4IfdpQk9JuCSw?view_as=subscriber" target="_blank">Subscribe to Lock <i class="fab fa-youtube"></i></a>
                 <div class="divider"></div>
                 <div id="changelog-open">Changelog<i class="material-icons">new_releases</i></div>
                 <div class="divider"></div>
@@ -455,7 +455,7 @@
             <canvas id="ls-orbs"></canvas>
             <div class="title">
                 <div class="main loadingTitle">HSLO</div>
-                <div class="sub loadingTitle">ㅡ HSLO Lock ㅡ</div>
+                <div class="sub loadingTitle">ㅡ HSLO Lock~Davi ㅡ</div>
             </div>
             <div class="progress-bar"><div class="fill"></div></div>
         </div>
