--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>HSLO</title>
+        <title>HSLO Davi&Lock</title>
 
         <base href="https://lock999.github.io/Sago/">
 
@@ -209,7 +209,7 @@
             <div class="player-data-box" multibox="off" primary="facebook">
                 <div id="toggle-streammode"><i class="material-icons">visibility</i></div>
                 <div class="input-row">
-                    <input class="input-field" id="tag" placeholder="Tag" maxlength="10"> <input class="input-field" id="nick1" placeholder="Nick 1" maxlength="14">
+                    <input class="input-field" id="tag" placeholder="Tag" maxlength="10" "input-field" id="tag2" placeholder="Tag" maxlength="10"> <input class="input-field" id="nick1" placeholder="Nick 1" maxlength="14">
                     <input class="input-field" id="nick2" placeholder="Nick 2" maxlength="14">
                 </div>
                 <div class="input-row"><input class="input-field" id="skin1" placeholder="Skin URL 1"> <input class="input-field" id="skin2" placeholder="Skin URL 2"></div>
